[package]
name = "clipboard-cli"
version = "0.0.1"
edition = "2018"
authors = ["Amila Welihinda <amilajack@gmail.com>"]
license = "MIT"
description = "A better command line clipboard"
readme = "README.md"
homepage = "https://github.com/amilajack/clipboard"
repository = "https://github.com/amilajack/clipboard"
keywords = ["cli", "clipboard", "pipe"]
categories = ["command-line-utilities"]

[[bin]]
name = "cb"
path = "src/main.rs"

[dependencies]
arboard = "3.3.0"
atty = "0.2"
